# Petal-Braids

petalbraid_starter/: README.md  pyproject.toml
petalbraid_starter/src/petalbraid/: __init__.py  braid.py  conventions.py  convert.py  converters.py  crossings.py  markov.py  permutation.py  petal.py  samples.py  stem.py
petalbraid_starter/src/petalbraid.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
petalbraid_starter/tests/: example.py  test_braid.py  test_permutation.py  test_petal.py
