[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "petalbraid"
version = "0.1.0"
description = "Starter scaffold for petal-knot to braid experiments"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {name = "OpenAI"}
]
license = {text = "MIT"}
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
